--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Index.cshtml
@@ -9,7 +9,7 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
-<table class="table">
+<table class="table mdl-data-table mdl-js-data-table mdl-shadow--2dp">
     <tr>
         <th>
             @Html.DisplayNameFor(model => model.AttributeName)
