--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Campaign/Create.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Campaign/Create.cshtml
@@ -14,7 +14,7 @@
     <div class="form-horizontal">
         <h4>CampaignViewModel</h4>
         <hr />
-        @Html.Partial("_ErrorSummary")
+        @Html.Partial("_MessageSummary")
         <div class="form-group">
             @Html.LabelFor(model => model.CampaignName, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
