--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Campaign/Edit.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Campaign/Edit.cshtml
@@ -14,7 +14,7 @@
     <div class="form-horizontal">
         <h4>CampaignViewModel</h4>
         <hr />
-        @Html.Partial("_ErrorSummary")
+        @Html.Partial("_MessageSummary")
         @Html.HiddenFor(model => model.CampaignId)
 
         <div class="form-group">
