--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/PlayerItem/_SearchItems.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/PlayerItem/_SearchItems.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DaemonCharacter.Application.ViewModels.PlayerItem.SelectedPlayerItemViewModel>
+﻿@model IEnumerable<DaemonCharacter.Application.ViewModels.Player.SelectedPlayerItemViewModel>
 
 @{Layout = null;}
 
