--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Create.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Create.cshtml
@@ -13,46 +13,51 @@
 
     <div class="form-horizontal">
         <hr />
-        @Html.Partial("_ErrorSummary")
-        <div class="form-group">
-            @Html.LabelFor(model => model.AttributeName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.AttributeName, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AttributeName, "", new { @class = "text-danger" })
+        <div id="MessageSummary">
+            @Html.Partial("_MessageSummary")
+        </div>
+        @Html.HiddenFor(model => model.AttributeId)
+        <div class="col-md-12">
+            <div class="form-group">
+                @Html.LabelFor(model => model.AttributeName, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.AttributeName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.AttributeName, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.AttributeDescription, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.AttributeDescription, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.AttributeDescription, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.AttributeType, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-2">
+                    @Html.EnumDropDownListFor(model => model.AttributeType, htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.AttributeType, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group" id="div-minimum">
+                @Html.LabelFor(model => model.AttributeMinimum, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-4">
+                    @Html.EditorFor(model => model.AttributeMinimum, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.AttributeMinimum, "", new { @class = "text-danger" })
+                </div>
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AttributeDescription, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.AttributeDescription, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AttributeDescription, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.AttributeType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-2">
-                @Html.EnumDropDownListFor(model => model.AttributeType, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.AttributeType, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.AttributeMinimum, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.AttributeMinimum, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AttributeMinimum, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group col-md-6">
-            @{Html.RenderPartial("_ListAvailableForBonus", Model);}
+            @{Html.RenderPartial("_ListAvailableAttributeForBonus", Model.AttributeBonus);}
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                @Html.ActionLink("Back to List", "Index") | <input type="submit" value="Create" class="btn btn-success" />
+                @Html.ActionLink("Back to List", "Index") | <input type="button" value="Create" name="CreateAttribute" class="btn btn-success" />
             </div>
         </div>
 
@@ -61,6 +66,5 @@
 
 
 @section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-    
+  @Scripts.Render("~/Scripts/Attribute.js")
 }
