--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Edit.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Edit.cshtml
@@ -13,7 +13,10 @@
 
     <div class="form-horizontal">
         <hr />
-        @Html.Partial("_ErrorSummary")
+
+        <div id="MessageSummary">
+            @Html.Partial("_MessageSummary")
+        </div>
         @Html.HiddenFor(model => model.AttributeId)
 
         <div class="form-group">
@@ -40,28 +43,29 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" id="div-minimum">
             @Html.LabelFor(model => model.AttributeMinimum, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-4">
                 @Html.EditorFor(model => model.AttributeMinimum, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AttributeMinimum, "", new { @class = "text-danger" })
             </div>
         </div>
-       
-        <div class="form-group col-md-6">
-            @{Html.RenderPartial("_ListAvailableForBonus", Model);}
+
+        <div class="form-group">
+            @{Html.RenderPartial("_ListAvailableAttributeForBonus", Model.AttributeBonus);}
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                @Html.ActionLink("Back to List", "Index") | <input type="submit" value="Save" class="btn btn-success" />
+                @Html.ActionLink("Back to List", "Index") | <input type="button" name="SaveAttribute" value="Save" class="btn btn-success" />
             </div>
         </div>
     </div>
-}
+                }
 
 
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/Scripts/Attribute.js")
 }
