--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Item/Edit.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Item/Edit.cshtml
@@ -1,11 +1,10 @@
 ﻿@model DaemonCharacter.Application.ViewModels.Item.ItemViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Item";
 }
 
-<h2 class="white">Edit</h2>
-
+<h2>Edit Item</h2>
 
 @using (Html.BeginForm())
 {
@@ -13,12 +12,14 @@
 
     <div class="form-horizontal Playercontainer">
         <hr />
-        @Html.Partial("_ErrorSummary")
+        <div id="MessageSummary">
+            @Html.Partial("_MessageSummary")
+        </div>
         @Html.HiddenFor(model => model.ItemId)
 
         <div class="form-group">
             @Html.LabelFor(model => model.ItemName, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
+            <div class="col-md-2">
                 @Html.EditorFor(model => model.ItemName, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ItemName, "", new { @class = "text-danger" })
             </div>
@@ -26,7 +27,7 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.ItemEffect, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
+            <div class="col-md-2">
                 @Html.EditorFor(model => model.ItemEffect, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ItemEffect, "", new { @class = "text-danger" })
             </div>
@@ -34,7 +35,7 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.ItemPrice, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
+            <div class="col-md-2">
                 @Html.EditorFor(model => model.ItemPrice, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.ItemPrice, "", new { @class = "text-danger" })
             </div>
@@ -42,23 +43,26 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.ItemCategory, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
+            <div class="col-md-2">
                 @Html.EnumDropDownListFor(model => model.ItemCategory, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.ItemCategory, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.UniqueUse, htmlAttributes: new { @class = "control-label" })
+            @Html.LabelFor(model => model.UniqueUse, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-2">
                 @Html.CheckBoxFor(model => model.UniqueUse, htmlAttributes: new { @class = "form-control" })
             </div>
         </div>
 
+        <div class="form-group">
+            @{Html.RenderPartial("_ListAvailableAttributeForBonus", Model.ItemAttribute);}
+        </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="button" class="btn btn-default" value="Back to List" onclick="window.location.href = '/Item'" /> | <input type="submit" value="Save" class="btn btn-success" />
+                @Html.ActionLink("Back to List", "Index") | <input type="button" name="SaveItem" value="Save" class="btn btn-success" />
             </div>
         </div>
     </div>
@@ -68,4 +72,5 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/Scripts/Item.js")
 }
