--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Player/Edit.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Player/Edit.cshtml
@@ -14,7 +14,7 @@
     <div class="form-horizontal Playercontainer">
         <h4>PlayerViewModel</h4>
         <hr />
-        @Html.Partial("_ErrorSummary")
+        @Html.Partial("_MessageSummary")
         @Html.HiddenFor(model => model.CharacterId)
 
         <div class="form-group">
