--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Player/_PlayerSheetItems.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Player/_PlayerSheetItems.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DaemonCharacter.Application.ViewModels.PlayerItem.SelectedPlayerItemViewModel>
+﻿@model IEnumerable<DaemonCharacter.Application.ViewModels.Player.SelectedPlayerItemViewModel>
 
 @if (Model.Where(t => !t.PlayerItemUsingItem).ToList().Count > 0)
 {
