--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Player/_PlayerSheetTalents.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Player/_PlayerSheetTalents.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<DaemonCharacter.Application.ViewModels.CharacterAttribute.SelectedCharacterAttributeViewModel>
+﻿@model IEnumerable<DaemonCharacter.Application.ViewModels.Attribute.SelectedCharacterAttributeViewModel>
 
 @if (Model.ToList().Count > 0)
 {
