--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/PlayerItem/_Create.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/PlayerItem/_Create.cshtml
@@ -1,12 +1,12 @@
-﻿@model DaemonCharacter.Application.ViewModels.PlayerItem.PlayerItemViewModel
+﻿@model DaemonCharacter.Application.ViewModels.Player.PlayerItemViewModel
 
 @{Layout = null;}
 
 <div class="form-group col-md-12">
     <h3 class="float-left">Buy Items</h3>
     <div class="col-md-1 float-right">
-        <label class="control-label small"><b>Total Invested:</b></label>
-        <input type="number" id="input-total-invested" class="form-control small" readonly="readonly"/>
+        <label class="control-label small" id="label-total-invested"><b>Total Invested:</b></label>
+        <input type="number" id="input-total-invested" class="form-control small" readonly="readonly" />
     </div>
     <div class="col-md-1 float-right">
         <label class="control-label small"><b>Total Money:</b></label>
@@ -26,37 +26,39 @@
         </select>
         <input type="text" class="form-control col-md-12" placeholder="Search" id="SearchAvailable" />
     </div>
-    <table class="table table-responsive table-striped small" id="table-item-available">
-        <thead>
-            <tr>
-                <th>Item</th>
-                <th colspan="2">Effect</th>
-                <th>Price</th>
-                <th>Qtd</th>
-                <th>Total</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Model.ListAvailableItems)
-            {
+    <div class="col-md-12" style="height:400px;overflow-y:auto;">
+        <table class="table table-responsive mdl-data-table mdl-js-data-table mdl-shadow--2dp" id="table-item-available">
+            <thead>
                 <tr>
-                    <td class="TdItemName">@Html.DisplayFor(m => item.ItemName)</td>
-                    <td colspan="2">@Html.DisplayFor(m => item.ItemEffect)</td>
-                    <td class="TdItemPrice">
-                        @Html.TextBoxFor(m => item.ItemPrice, new { @readonly = "readonly", @class = "form-control textbox-small" })
-                    </td>
-                    <td class="TdItemQtd"><input type="number" class="form-control textbox-small" name="ItemQtd" min="0" placeholder="0" /></td>
-                    <td class="TdItemTotal"><input type="number" class="form-control textbox-small" name="ItemTotal" readonly="readonly" /></td>
-                    <td>
-                        <input id="@Html.Raw(item.ItemId)" type="button" class="btnIncludeItem btn btn-success" value=" + " />
-                    </td>
+                    <th>Item</th>
+                    <th colspan="2">Effect</th>
+                    <th>Price</th>
+                    <th>Qtd</th>
+                    <th>Total</th>
+                    <th></th>
                 </tr>
-            }
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+                @foreach (var item in Model.ListAvailableItems)
+            {
+                    <tr>
+                        <td class="TdItemName">@Html.DisplayFor(m => item.ItemName)</td>
+                        <td colspan="2">@Html.DisplayFor(m => item.ItemEffect)</td>
+                        <td class="TdItemPrice">
+                            @Html.TextBoxFor(m => item.ItemPrice, new { @readonly = "readonly", @class = "form-control textbox-small" })
+                        </td>
+                        <td class="TdItemQtd"><input type="number" class="form-control textbox-small" name="ItemQtd" min="0" placeholder="0" /></td>
+                        <td class="TdItemTotal"><input type="number" class="form-control textbox-small" name="ItemTotal" readonly="readonly" /></td>
+                        <td>
+                            <input id="@Html.Raw(item.ItemId)" type="button" class="btnIncludeItem btn btn-success" value=" + " />
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
 </div>
-<div class="col-md-4">
+<div class="col-md-4" style="height:400px;overflow-y:auto;">
     <div class="form-group col-md-12">
         <h4>Selected Items</h4>
         <select class="form-control">
@@ -68,7 +70,7 @@
         </select>
         <input type="text" class="form-control col-md-12" placeholder="Search" id="SearchSelected" />
     </div>
-    <table class="table table-responsive table-striped" id="table-item-selected">
+    <table class="table table-responsive mdl-data-table mdl-js-data-table mdl-shadow--2dp" id="table-item-selected">
         <thead>
             <tr>
                 <th>Item</th>
@@ -78,8 +80,6 @@
                 <th></th>
             </tr>
         </thead>
-        <tbody>
-            
-        </tbody>
+        <tbody></tbody>
     </table>
 </div>
