--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Index.cshtml
@@ -14,7 +14,7 @@
 </h3>
 
 <p>
-    <a class="sprite sprite-New-Item animated wow fadeInDown div-icon" href="~/Attribute/Create"></a>
+    <a class="sprite sprite-New-Item animated wow fadeInDown div-icon" href="~/Attribute/Create" title="Create new"></a>
 </p>
 <table class="table table-striped table-bordered table-hover" id="TabIndex">
     <thead>
