--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Home/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@section CustomStyle {
     @Styles.Render("~/bundles/homeCss")
 }
-<section id="slider" class="fullheight" style="background:url('../../Images/13.jpg')">
+<section id="slider" class="fullheight" style="background: url('../../Images/Landscapes/Players.jpg'); background-position: left bottom">
     <div class="overlay dark-1"><!-- dark overlay [1 to 9 opacity] --></div>
 
     <div class="display-table">
