--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Shared/_Layout.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Shared/_Layout.cshtml
@@ -45,11 +45,10 @@
                         </ul>
                     </div>
                     <div class="col-md-3 col-sm-4 col-md-push-3 animated wow fadeInLeft" data-wow-delay="0.6s">
-                        <h3 class="fh5co-lead">More Links</h3>
+                        <h3 class="fh5co-lead">Photo and Images credits</h3>
                         <ul>
-                            <li><a href="#">Feedback</a></li>
-                            <li><a href="#">Frequently Ask Questions</a></li>
-                            <li><a href="#">Terms of Service</a></li>
+                            <li><a href="http://flickr.com" target="blank">Flickr</a></li>
+                            <li><i><a href="http://www.freerangestock.com" target="blank">Free Range Stock</a></i></li>
                         </ul>
                     </div>
 
