--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Create.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Create.cshtml
@@ -66,7 +66,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <a class="sprite sprite-List-Item div-icon" href="~/Attribute" title="List"></a> | <a class="sprite sprite-New-Item div-icon" name="CreateAttribute" href="#" title="Create"></a> 
+            <a class="sprite sprite-List-Item div-icon" href="~/Attribute" title="List"></a> | <input type="button" name="CreateAttribute" value="Create" class="btn btn-success" />
         </div>
     </div>
 
