--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Index.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Attribute/Index.cshtml
@@ -8,57 +8,62 @@
     @Styles.Render("~/bundles/Sprite/Acoes")
 }
 
-<h3 class="animated wow fadeInUp" data-wow-delay="0.2s">
-    <i class="sprite sprite-List-Item animated wow fadeInDown div-icon"></i>
-    &nbsp;List of Attributes
-</h3>
+<section id="slider" class="fullheight" style="background: url('../../Images/Landscapes/Woman.jpg'); background-position: top right">
+    <h3 class="animated wow fadeInUp" data-wow-delay="0.2s">
+        <i class="sprite sprite-List-Item animated wow fadeInDown div-icon"></i>
+        &nbsp;List of Attributes
+    </h3>
 
-<p>
-    <a class="sprite sprite-New-Item animated wow fadeInDown div-icon" href="~/Attribute/Create" title="Create new"></a>
-</p>
-<table class="table table-striped table-bordered table-hover" id="TabIndex">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.AttributeName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AttributeDescription)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AttributeType)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.AttributeMinimum)
-            </th>
-            <th>Actions</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
+    <p>
+        <a href="~/Attribute/Create" title="Create new">
+            <span class="sprite sprite-New-Item animated wow fadeInDown div-icon"></span>
+            &nbsp;<span>Create New</span>
+        </a>
+
+    </p>
+    <table class="table table-striped table-bordered table-hover" id="TabIndex">
+        <thead>
             <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AttributeName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AttributeDescription)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AttributeType)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.AttributeMinimum)
-                </td>
-                <td>
-                    <a class="sprite sprite-Edit-Item div-icon" href="~/Attribute/Edit/@item.AttributeId"></a>&nbsp;|&nbsp;
-                    <a class="sprite sprite-Installing-Updates-48 div-icon" href="~/Attribute/Details/@item.AttributeId"></a>&nbsp;|&nbsp;
-                    <a class="sprite sprite-Delete-Item div-icon" href="~/Attribute/Delete/@item.AttributeId"></a>
-                </td>
+                <th>
+                    @Html.DisplayNameFor(model => model.AttributeName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.AttributeDescription)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.AttributeType)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.AttributeMinimum)
+                </th>
+                <th>Actions</th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.AttributeName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.AttributeDescription)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.AttributeType)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.AttributeMinimum)
+                    </td>
+                    <td>
+                        <a class="sprite sprite-Edit-Item div-icon" href="~/Attribute/Edit/@item.AttributeId" title="Edit"></a>&nbsp;|&nbsp;
+                        <a class="sprite sprite-Delete-Item div-icon" href="~/Attribute/Delete/@item.AttributeId" title="Remove"></a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+</section>
 @section scripts {
     @Scripts.Render("~/bundles/dataTables")
     <script type="text/javascript">
