--- a/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Shared/_MessageSummary.cshtml
+++ b/DaemonCharacter/DaemonCharacter.UI.MVC/Views/Shared/_MessageSummary.cshtml
@@ -3,7 +3,7 @@
 {
     <div class="alert alert-danger">
         <button type="button" class="close" data-dismiss="alert">×</button>
-        <h3>Oops! something goes wrong:</h3>
+        <h4>Oops! something went wrong:</h4>
         @Html.ValidationSummary(true)
     </div>
 }
@@ -12,6 +12,6 @@
 {
     <div class="alert alert-success">
         <button type="button" class="close" data-dismiss="alert">×</button>
-        <h3>@ViewBag.Sucesso</h3>
+        <h4>@ViewBag.Sucesso</h4>
     </div>
 }
